--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -69,7 +69,7 @@
     </form>
     <br>
     <div class="container-button">
-        <button mat-raised-button style="background-color: #4e4e4e; width: 50%;" [disabled]="formRegister.invalid" (click)="register(formRegister.value)">Crear usuario</button>
-        <button mat-button style="color: #ffffff" routerLink="/">Ya tengo cuenta</button>
+        <button mat-raised-button style="background-color: #2c3968; width: 50%;" [disabled]="formRegister.invalid" (click)="register(formRegister.value)">Crear usuario</button>
+        <button mat-button style="color: #2c3968" routerLink="/">Ya tengo cuenta</button>
     </div>
 </div>
