--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,16 +1,64 @@
 mat-card {
-    max-width: 100%;
-    background: linear-gradient(260deg, #4b6cb7 0%, #182848 100%);
-    color: #F0F8FF;
+    max-width: auto;
+    height: auto;
+    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+    color: #2c3968;
 }
 
 mat-card-subtitle {
-    color: #F0F8FF;
+    color: #2c3968;
 }
 
 .spacer {
-    height: 50px;
+    height: 40px;
 }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header h2 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 33% 33%;
+    column-gap: 10px;
+    row-gap: 20px;
+}
+
+.item-a {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.item-b {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.item-c {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+.item-d {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
 
 .container-buttons-card {
     display: flex;
@@ -21,8 +69,4 @@ mat-card-subtitle {
     margin-right: 8px;
     margin-top: 8px;
     background-color: #2c3968;
-}
-
-p {
-    font-weight: bold;
 }
