--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,8 +1,9 @@
 #container {
-    display: flexbox;
+    display: flex;
+    flex-direction: column;
     flex: wrap;
     width: 40%;
-    background: linear-gradient(180deg, #4b6cb7 0%, #182848 100%);
+    background-image: linear-gradient(120deg, #fdfbfb 0%, #c3cfe2 100%);
     border-radius: 10px;
     padding: 30px;
 }
@@ -13,15 +14,15 @@ table {
 }
 
 mat-form-field {
-    color: aliceblue;
+    color: #2c3968;
 }
 
 ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
-    color: rgb(255, 255, 255);
+    color: #2c3968;
 }
 
 mat-label {
-    color: aliceblue;
+    color: #2c3968;
 }
 
 .container-button {
