--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="mat-elevation-z8" id="container">
-    <p style="color: aliceblue; font-size: x-large;">Bienvenido!!</p>
-    <p style="color: aliceblue">Ingrese sus datos para continuar.</p>
+    <p style="color: #2c3968;; font-size: x-large;">Bienvenido!!</p>
+    <p style="color: #2c3968">Ingrese sus datos para continuar.</p>
     <br>
     <form [formGroup]="formLogin">
         <table>
@@ -18,14 +18,14 @@
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
-                    <mat-hint>*Debe tener mas de 8 caracteres</mat-hint>
+                    <mat-hint style="color: #2c3968;">*Debe tener mas de 8 caracteres</mat-hint>
                 </mat-form-field>
             </tr>
         </table>
     </form>
     <br>
     <div class="container-button">
-        <button [disabled]="!formLogin.valid" mat-raised-button style="background-color: #4e4e4e; width: 50%;" (click)="login(formLogin.value.username, formLogin.value.password)">Ingresar</button>
-        <button mat-button style="color: #ffffff" routerLink="/register">Registrarse</button>
+        <button [disabled]="!formLogin.valid" mat-raised-button style="background-color: #2c3968; width: 50%;" (click)="login(formLogin.value.username, formLogin.value.password)">Ingresar</button>
+        <button mat-button style="color: #2c3968" routerLink="/register">Registrarse</button>
     </div>
 </div>
