--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -2,7 +2,7 @@
     display: flexbox;
     flex-wrap: wrap;
     width: fit-content;
-    background: linear-gradient(180deg, #4b6cb7 0%, #182848 100%);
+    background: linear-gradient(0deg, #c3cfe2 0%, #182848 100%);
     border-radius: 10px;
     padding: 30px;
 }
