--- a/src/app/pages/transacciones/transacciones.component.css
+++ b/src/app/pages/transacciones/transacciones.component.css
@@ -2,6 +2,10 @@ table {
     width: 100%;
 }
 
+mat-table {
+    background-color: #182848;
+}
+
 .spacer {
     margin-top: 5%;
     margin-bottom: 5%;
@@ -9,7 +13,6 @@ table {
 
 .p-title {
     color: rgb(255, 255, 255);
-    font-weight: bold;
     font-size: larger;
 }
 
@@ -37,12 +40,12 @@ mat-label {
 
 .container-button button {
     width: 100%;
-    background-color: #717171;
+    background-color: #2c3968;
     color: rgb(255, 255, 255);
 }
 
 .container-button-valid button {
     width: 100%;
-    background-color: #2c3968;
-    color: #F0F8FF;
+    background-color: #F0F8FF;
+    color: #2c3968;
 }
