--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
             </mat-card-actions>
         </mat-card>
     </div>
-
+<!-- 
     <div class="item-b">
         <mat-card class="mat-elevation-z8">
             <mat-card-title>Historial</mat-card-title>
@@ -37,7 +37,7 @@
                 </div>
             </mat-card-actions>
         </mat-card>
-    </div>
+    </div> -->
 
     <div class="item-c">
         <mat-card class="mat-elevation-z8">
