--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-elevation-z8">
     <div class="card-container">
-        <div class="container-img" *ngIf="user[0].avatar != null">
+        <div class="container-img" *ngIf="user[0]?.avatar != null">
             <img src="{{user[0].avatar}}" alt="img-perfil" width="150">
         </div>
         <div class="container-info">
@@ -23,25 +23,25 @@
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Id del usuario</mat-label>
-                            <input matInput disabled value="{{user[0].id}}">
+                            <input matInput disabled value="{{user[0] && user[0]?.id}}">
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Saldo</mat-label>
-                            <input matInput disabled value="{{user[0].saldo | currency}}">
+                            <input matInput disabled value="{{user[0] && user[0]?.saldo | currency}}">
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Nombre/s:</mat-label>
-                            <input matInput disabled value="{{user[0].first_name}}">
+                            <input matInput disabled value="{{user[0] && user[0]?.first_name}}">
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Apellido:</mat-label>
-                            <input matInput disabled value="{{user[0].last_name}}">
+                            <input matInput disabled value="{{user[0] && user[0]?.last_name}}">
                         </mat-form-field>
                     </td>
                 </tr>
@@ -49,13 +49,13 @@
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Email:</mat-label>
-                            <input matInput disabled value="{{user[0].email}}">
+                            <input matInput disabled value="{{user[0] && user[0]?.email}}">
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Rol:</mat-label>
-                            <input matInput disabled value="{{user[0].groups}}">
+                            <input matInput disabled value="{{user[0] && user[0]?.groups}}">
                         </mat-form-field>
                     </td>
                 </tr>
@@ -63,33 +63,28 @@
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Permisos de Usuario:</mat-label>
-                            <input matInput disabled value="{{user[0].user_permissions}}">
+                            <input matInput disabled value="{{user[0] && user[0]?.user_permissions}}">
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Es Staff:</mat-label>
-                            <input matInput disabled value="{{user[0].is_staff | boolean}}">
+                            <input matInput disabled value="{{user[0] && user[0]?.is_staff | boolean}}">
                         </mat-form-field>
                     </td>
-                    <td>
-                        <mat-form-field appearance="outline" style="width: 100%;">
-                            <mat-label>Es root:</mat-label>
-                            <input matInput disabled value="{{user[0].is_root | boolean}}">
-                        </mat-form-field>
-                    </td>
+
                 </tr>
                 <tr>
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
-                            <mat-label>Ultimo Ingreso:</mat-label>
-                            <input matInput disabled value="{{user[0].last_login | date: 'd/M/y - h:mm:ss a'}}">
+                            <mat-label>Es root:</mat-label>
+                            <input matInput disabled value="{{user[0] && user[0]?.is_root | boolean}}">
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Fecha registro:</mat-label>
-                            <input matInput disabled value="{{user[0].date_joined | date: 'd/M/y - h:mm:ss a'}}">
+                            <input matInput disabled value="{{user[0] && user[0]?.date_joined | date: 'd/M/y - h:mm:ss a'}}">
                         </mat-form-field>
                     </td>
                 </tr>
@@ -111,11 +106,17 @@
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-icon style="color:aliceblue">cloud_upload</mat-icon>
                             <label class="upload-button">
-                                <input type="file" accept=".jpeg,.jpg,.png" (change)="handleFileInput($event)" />
-                                Subir imagen
+                                <input name="avatar" type="file" accept=".jpeg,.jpg,.png" formControlName="avatar" (change)="fileInput($event)" />
+                                {{this.file?.name || 'Subir Imagen'}}
                             </label>
                             <input matInput hidden/>
                             <mat-hint class="mat-form-field-hint-end">JPEG / JPG / PNG</mat-hint>
+                        </mat-form-field>
+                    </td>
+                    <td>
+                        <mat-form-field appearance="outline" style="width: 100%;">
+                            <mat-label>Nombre de Usuario:</mat-label>
+                            <input type="text" matInput formControlName="username" placeholder="">
                         </mat-form-field>
                     </td>
                 </tr>
@@ -123,19 +124,19 @@
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Saldo:</mat-label>
-                            <input type="number" matInput formControlName="saldo" placeholder="$" required>
+                            <input type="number" matInput formControlName="saldo" placeholder="$">
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Nombre/s:</mat-label>
-                            <input type="text" matInput formControlName="first_name" required>
+                            <input type="text" matInput formControlName="first_name">
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Apellido:</mat-label>
-                            <input type="text" matInput formControlName="last_name" required>
+                            <input type="text" matInput formControlName="last_name">
                         </mat-form-field>
                     </td>
                 </tr>
@@ -153,7 +154,7 @@
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Email:</mat-label>
-                            <input type="email" matInput formControlName="email" placeholder="email@example.com" required>
+                            <input type="email" matInput formControlName="email" placeholder="email@example.com">
                         </mat-form-field>
                     </td>
                     <td>
@@ -170,7 +171,7 @@
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Permisos de Usuario:</mat-label>
-                            <mat-select formControlName="user_permissions" required>
+                            <mat-select formControlName="user_permissions">
                                 <mat-option style="color: whitesmoke;" value="usuario">Usuario</mat-option>
                                 <mat-option style="color: whitesmoke;" value="invitado">Invitado</mat-option>
                                 <mat-option style="color: whitesmoke;" value="admin">Administrador</mat-option>
@@ -180,7 +181,7 @@
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Es Staff:</mat-label>
-                            <mat-select formControlName="is_staff" [value]="false" required>
+                            <mat-select formControlName="is_staff" [value]="false">
                                 <mat-option style="color: whitesmoke;" value="true">Si</mat-option>
                                 <mat-option style="color: whitesmoke;" value="false">No</mat-option>
                             </mat-select>
@@ -189,7 +190,7 @@
                     <td>
                         <mat-form-field appearance="outline" style="width: 100%;">
                             <mat-label>Es root:</mat-label>
-                            <mat-select formControlName="is_root" [value]="false" required>
+                            <mat-select formControlName="is_root" [value]="false">
                                 <mat-option style="color: whitesmoke;" value="true">Si</mat-option>
                                 <mat-option style="color: whitesmoke;" value="false">No</mat-option>
                             </mat-select>
@@ -202,7 +203,7 @@
             <button mat-raised-button style="width: 100%; background-color: #2c3968; color: rgba(255, 255, 255, 0.37);" disabled>Actualizar Datos</button>
         </div>
         <ng-template #formValid>
-            <button mat-raised-button style="width: 100%; background-color: #F0F8FF; color: #2c3968;" routerLink="/perfil">Actualizar Datos</button>
+            <button mat-raised-button style="width: 100%; background-color: #F0F8FF; color: #2c3968;" (click)="imgAvatar()" routerLink="/perfil">Actualizar Datos</button>
         </ng-template>
     </mat-tab>
 </mat-tab-group>
